# secure-apis

ch04/: auth.py  bfla.py  bola.py  broken_authentication.py  excessive_data_exposure.py  mass_assignment.py  pyproject.toml  security_misconfiguration.py  ssrf.py  unrestricted_resource_consumption.py  unsafe_consumption_apis.py  vulnerable_business_flows.py
ch05/: pyproject.toml  ssrf.py
ch06/: 6_1_safe_pagination.yaml  6_1_unsafe_pagination.yaml  6_3_constrained_input.yaml  6_3_constrained_sortBy_parameters.yaml  6_3_unconstrained_input.yaml  6_3_unconstrained_sortBy_parameters.yaml  6_4_additional_properties_allowed.yaml  6_4_additional_properties_not_allowed.yaml  6_4_composition.yaml  6_4_multiple_models_same_schema.yaml  6_5_different_models_input_output.yaml  6_5_same_model_input_output.yaml  6_6_payment_flow.yaml
ch08/: api.py  jwt_generator_jose.py  jwt_generator_jose_hs256.py  jwt_generator_jwcrypto.py  jwt_generator_pyjwt_hs256.py  jwt_generator_pyjwt_ps256.py  jwt_generator_pyjwt_rs256.py  jwt_validator_jose.py  jwt_validator_jose_hs256.py  jwt_validator_jwcrypto.py  jwt_validator_pyjwt_hs256.py  jwt_validator_pyjwt_ps256.py  openapi.yaml  private_key.pem  public_key.pem  pyproject.toml
ch11/: pyproject.toml  server.py
ch12/: auth.py  db_session.py  models.py  openapi.json  pyproject.toml  server.py  tests.py
