[tool.poetry]
name = "ch08 - Adding authentication and authorization to APIs"
version = "1.0.0"
description = ""
authors = ["Jose Haro Peralta <jose@microapis.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyjwt = "^2.9.0"
python-jose = "^3.3.0"
jwcrypto = "^1.5.6"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
